--- a/.github/workflows/working-dir-and-shells.yml
+++ b/.github/workflows/working-dir-and-shells.yml
@@ -18,8 +18,8 @@ jobs:
         steps:
             - name: Display my working directory and list files
               run: |
-                pwd
-                ls -a
-                echo $GITHUB_SHA
-                echo $GITHUB_REPOSITORY
-                echo $GITHUB_WORKSPACE
+                Get-Location
+                dir
+                echo $env:GITHUB_SHA
+                echo $env:GITHUB_REPOSITORY
+                echo $env:GITHUB_WORKSPACE
